--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -12,11 +12,12 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #FF4081
+$primary   : #FF0266
 $secondary : #26A69A
 $accent    : #9C27B0
 
-$dark      : #1D1D1D
+$dark      : #121212
+$lightdark : #1F1F1F
 
 $positive  : #21BA45
 $negative  : #C10015
